working maven for JRE 22